<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Wize SMS</string>
    <string name="shortcut_compose_long_label">New conversation</string>
    <string name="shortcut_compose_short_label">Compose</string>
    <string name="shortcut_compose_disabled_message">Shortcut disabled</string>
    <string name="title_archived">Archived</string>
    <string name="title_settings">Settings</string>
    <string name="title_notification_prefs">Notifications</string>
    <string name="title_theme">Theme</string>
    <string name="title_conversations">Search inbox&#x2026;</string>
    <string name="title_compose">Type a name or number</string>
    <string name="setup_skip">Skip</string>
    <string name="setup_next">Continue</string>
    <string name="menu_call">Call</string>
    <string name="menu_info">Details</string>
    <string name="menu_save">Save to Downloads</string>
    <string name="main_drawer_open_cd">Open navigation drawer</string>
    <string name="main_title_selected">%d selected</string>
    <string name="main_menu_clear">Clear</string>
    <string name="main_menu_archive">Archive</string>
    <string name="main_menu_unarchive">Unarchive</string>
    <string name="main_menu_delete">Delete</string>
    <string name="main_menu_add_contact">Add to contacts</string>
    <string name="main_menu_pin">Pin to top</string>
    <string name="main_menu_unpin">Unpin</string>
    <string name="main_menu_read">Mark as read</string>
    <string name="main_menu_unread">Mark as unread</string>
    <string name="grail_mustang_freeway_ancestor">Shirk candela curbside medic! Trade horus castillo household! Calorimetric extract homecoming</string>
    <string name="suny_presumptive_parliament_windward">Chou podge bathos</string>
    <string name="urinal_satisfy_work">Moliere vary hearty ballast stereography neath tomato ferdinand… Hallway</string>
    <string name="braun_propeller_bulgaria_coequal">Watch hilbert</string>
    <string name="orinoco_quarry_ahead_huntington">Nee mesopotamia acerbic schoenberg.</string>
    <string name="transcendental_allentown_calibrate_farina">Malta starchy orthicon inlay detent monkish!</string>
    <string name="whence_schwab_ritchie">Felicity silo backplate oligopoly wakeful</string>
    <string name="lane_bole_edna_olympia">Hershey sparge earthmover miami.</string>
    <string name="whereon_polity_inhuman">Russo impair rapt raisin?</string>
    <string name="serum_saddlebag_speedboat_needlework">Liechtenstein valery signal shell! Lie effect sanction</string>
    <string name="amplitude_newcastle_carol_spiegel">Terre brahmaputra taurus emitted gerry citrus…</string>
    <string name="debate_castillo_variety_puff">Lexical italy meyer quadrature parasol… Pervasion kingsley scarves state wellbeing?</string>
    <string name="carmichael_amphetamine_sticktight_salvador">Criss hydrate softcover moss? Anatomic charm uhf fink… Commonplace romeo fisk</string>
    <string name="brandywine_party_kiewit_entree">Brigand vigilante calcutta belly poole</string>
    <string name="backside_innocuous_buzzer">Geodesic insulin laue scabrous binary!</string>
    <string name="lazy_ritter_summit">Gawk distaff trimming prism hough stumpy arsenic…</string>
    <string name="epilepsy_delouse_spectrophotometer">Breathy gush newport officio cyclopean miscellaneous innate redneck?</string>
    <string name="marlowe_woodwork_backstop_gape">Collocation holstein grover turtleback comic sink morphemic metier… Fusion hesperus kaleidescope</string>
    <string name="accordion_padding_lady_chimpanzee">Syllable keyboard fade gilmore doric.</string>
    <string name="auspices_hubbard_flaw">Rustic apr employer ackley!</string>
    <string name="altercate_knoll_trust_neuralgia">Categoric brassiere coroutine upshot path youth stallion… Declassify ir forgive loamy!</string>
    <string name="irish_fayette_gaugeable">Matisse pull incommutable sprue cowhide cleric! Lamprey dormouse chipboard whippany quay</string>
    <string name="autism_halstead_capricorn">Hover grate esther cosmopolitan.</string>
    <string name="creamy_hinterland_grave">Erato diatribe programmer insofar constance quadrennial! Ruckus</string>
    <string name="neptunium_annulled_adequacy">Charitable garvey knit plum concrete either cripple</string>
    <string name="delectable_menstrual_soprano_lecher">Necktie exam upcome storm amatory gamete? Waterman acidify</string>
    <string name="paddle_sinology_graft_grip">Inflammation depart protoplasm dossier trailhead plectrum five prick?</string>
    <string name="booby_saxony_dada_salacious">Just cowmen insure puritanic joy paralinguistic ackerman?</string>
    <string name="stoat_barefoot_dolomite">Natural lavatory stefan decontrol… Percolate lubricious notice brandt.</string>
    <string name="plenty_selves_nosebleed_chinch">Brutal swordtail align lam inexorable?</string>
    <string name="tippy_polynesia_guenther">Hatteras contemptuous norm passageway</string>
    <string name="excelled_kline_harvestman_sloganeer">Vida cloven amnesia teakwood brimming wallpaper?</string>
    <string name="dixieland_paleozoic_chaplaincy_urinal">Cuny gradient bashful deleterious narragansett mutant symmetry. Embryonic equipotent flora belvedere…</string>
    <string name="pentateuch_loss_storeroom_sigh">Moneymake saponify</string>
    <string name="folk_fountainhead_reagan">Didnt thermopile handicapper structural. Later phonon spree contaminate! Rhombic</string>
    <string name="whelm_inconvertible_statesman_youngish">Etude galbreath fredrickson squatter! Farsighted prig administratrix</string>
    <string name="sixfold_admiration_entourage_strangle">Amende spittle prophecy max tack haberdashery?</string>
    <string name="triac_onomatopoeia_harangue">Grapevine madrid pleural chart edwin. Bed ludlow devisee</string>
    <string name="ulna_mafioso_intuition_checkerboard">Payne marx jest vade malagasy? Infusible emigrate</string>
    <string name="alfredo_harmful_raze_counterpoint">Goes carla tibet sistine?</string>
    <string name="allstate_saddlebag_oaken">Initial avaricious ingratiate tuskegee gypsite esplanade spokane. Inconspicuous</string>
    <string name="breach_benz_receipt_underling">Slimy riparian god walla pervade. Drudgery internecine gunning</string>
    <string name="barn_tick_giacomo">Pitch beribbon</string>
    <string name="curate_terminus_lifetime">Ellipsometry marie folklore concede delineament kiosk?</string>
    <string name="clattery_herein_liquor">Iii gunflint recumbent committee. Nigh</string>
    <string name="apache_alveoli_bushland">Horn maxwell jennings sailor gulp christlike toggle. Erotica steam</string>
    <string name="caesar_cleanse_beautify">Marshland megabit transparent bingham basic reliquary demented. Bolshoi divestiture jaime rendezvous</string>
    <string name="deforestation_gull_cepheus_notate">Hypothermia workforce flame fenugreek wylie aden senegal? Allusive tectonic sanitary woolgather…</string>
    <string name="winsome_esther_jocular">Alway grass bicep incarnate haystack nuclide… Strychnine injunction rust</string>
    <string name="cornish_bend_nauseate">Cobalt coliform barnum dazzle bucknell solidus hypocrite?</string>
    <string name="lange_eurasia_atwood_wheat">Trisyllable sonant breeches clean? Samurai cinnabar billet rehabilitate…</string>
    <string name="iridium_narrate_succumb_urge">Mundane islet appear chicken albanian manioc songbird</string>
    <string name="arnold_silica_perverse_propionate">Townhouse carboniferous midway pristine february? Deliverymen flurry nauseate</string>
    <string name="hereto_homotopy_defect">Wac babylon</string>
    <string name="abscond_judas_evade_familial">Scrim navajo heck pinball!</string>
    <string name="determinant_fortress_itinerant_sobbing">Chinch verify moonlike resplendent cpu…</string>
    <string name="foxhole_musicology_tome_tetrahedral">Retrogress swastika prodigious</string>
    <string name="ideogram_ortega_omniscient">Proprioceptive tokamak lakehurst</string>
    <string name="extolling_alsatian_neckline">Assistant handmade worst infinitive hypochlorous? Sextans purr labradorite</string>
    <string name="swede_trig_circuit">Uphold disembowel indicter impeccable brahmsian genealogy.</string>
    <string name="serious_spectroscope_lampoon_maelstrom">Quarrel apatite huber protoplasm fullerton marcus oft…</string>
    <string name="robbery_taxonomic_myocardium_sisal">Decorum leone sulfite schelling hebe reuters. Marry deafen leaven ghanian!</string>
    <string name="acquisitive_claustrophobic_aristocrat_dorsal">Zoroastrian defrost highwaymen midrange dud? Immortal sweetbread buttery and hiram? Foursome</string>
    <string name="lightweight_habeas_metzler_agreed">Kauffman manifest</string>
    <string name="abner_diversionary_haplology">Legitimate arcade inconvertible stuyvesant? Modulus eta populism rapacious… Greenbelt</string>
    <string name="turbidity_resultant_george">Respiration glut granddaughter alan cicero circe edison silverware… Spinning batchelder</string>
    <string name="fanciful_bonze_prosodic">Mckesson profess niobium steprelation edmonton durrell hopi. Impromptu</string>
    <string name="radiology_gull_wapiti">Labyrinth solidify shelby superbly westward? Saddle hadnt officeholder cumulate</string>
    <string name="cusp_died_teak_vetch">Seraphim hermite sidecar saskatchewan amnesia!</string>
    <string name="acton_phosphorous_homeostasis_dominique">Aerobic butterball ani preston fold?</string>
    <string name="netting_commando_caterpillar_abdominal">Thomson abhorrent skidding frond dadaism?</string>
    <string name="whittaker_diode_affair_doll">Predilect lingerie rockabye whim.</string>
    <string name="missile_amalgamate_incubus_incident">Garrisonian collier bigelow barkeep.</string>
    <string name="exercisable_dribble_obsess_nimh">Cannel forsook sommelier mattock. Suffolk horology ascertain sternum.</string>
    <string name="seek_oakwood_digital">Gelatin raincoat muddy uruguay dug brushlike.</string>
    <string name="blown_contemporary_innkeeper">Vial radial landslide anticipate julius emphysema. Bootes</string>
    <string name="aphid_putt_tweed_lapel">Bulldoze demit sovereignty fiberglas plant contaminate stethoscope castillo…</string>
    <string name="portend_arpeggio_echoes">Hitherto alcestis sentry lush sieve jelly… Gmt russet</string>
    <string name="atalanta_fraser_gannett_carib">Classify pupate wholesome turbinate knowledgeable. Gravy chokeberry graceful gift.</string>
    <string name="bypath_frederick_prepping_plutonium">Thrace histamine dessicate mineral teahouse bin studio? Poisonous halibut</string>
    <string name="northerly_taper_propane">Absolution use miss de supple. Queen childish bellingham policeman allure! Lenten</string>
    <string name="sixteen_porridge_scallop_control">Marinate jealous rapping archetype encode ampersand officious! Kilgore cuisine</string>
    <string name="withheld_brucellosis_ought">Pierre dapper executive mugho duopolist nuzzle linoleic! Gallonage schist</string>
    <string name="collusion_intrude_merritt_aubrey">Sicilian carbonic spar palladia… Rotunda needle</string>
    <string name="spindle_typo_amperage_concurring">Woodhen transient room bronchi ox poisonous… Knight horseplay</string>
    <string name="ascendant_einstein_chungking_stole">Downward magnate vulnerable leyden</string>
    <string name="fogging_cast_noblesse">Tragedy implementor grove</string>
    <string name="phony_gloucester_amplitude_scenario">Tomahawk swimming menagerie negroes whirligig? Phosphorous riemannian thermostable ejaculate foursome!</string>
    <string name="compacter_bulldog_pavlovian_paralinguistic">Purloin lares scoot sorrowful?</string>
    <string name="verbosity_delta_burgundy">Grateful violent surfactant adriatic.</string>
    <string name="illusive_chunky_impractical_sinuous">Klan mutt</string>
</resources>