<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <LinearLayout android:gravity="bottom" android:id="@+id/suspenseDegradationLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal" app:layout_constraintBottom_toTopOf="@id/mickyFunctionaryView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <AutoCompleteTextView android:background="@color/eucharist_ileum" android:hint="@string/triac_onomatopoeia_harangue" android:id="@+id/lowboyView" android:layout_height="match_parent" android:layout_margin="@dimen/perversion_oneill" android:layout_width="wrap_content" android:text="@string/radiology_gull_wapiti" android:textColor="@color/pleiades_whirligig_lindbergh"/>
        <CheckBox android:background="#1FE8C8" android:hint="@string/brandywine_party_kiewit_entree" android:id="@+id/conciseView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/collusion_intrude_merritt_aubrey" android:textColor="#57ED6D6E"/>
        <Button android:background="@color/gallantry_offal_golden" android:hint="@string/sixfold_admiration_entourage_strangle" android:id="@+id/bruitView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/foxhole_musicology_tome_tetrahedral" android:textColor="@color/stairwell_chromate_baseband"/>
        <CheckBox android:background="@color/durward_bugging_sherry" android:hint="@string/seek_oakwood_digital" android:id="@+id/audioView" android:layout_height="match_parent" android:layout_marginBottom="@dimen/polyandry_rental" android:layout_width="wrap_content" android:paddingTop="@dimen/prophet_gagging_margin" android:text="@string/dixieland_paleozoic_chaplaincy_urinal"/>
        <TextView android:hint="@string/phony_gloucester_amplitude_scenario" android:id="@+id/viralAnodicView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="22dp" android:text="@string/determinant_fortress_itinerant_sobbing" android:textColor="@color/funny_mush_profane"/>
        <LinearLayout android:gravity="center" android:id="@+id/intakeLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="vertical">
            <CheckBox android:background="@color/launder_headlong" android:hint="@string/atalanta_fraser_gannett_carib" android:id="@+id/meetEquitableView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/acquisitive_claustrophobic_aristocrat_dorsal" android:textSize="@dimen/areawide_decathlon_textsize"/>
            <CheckBox android:background="@color/anodic_tickle_allay" android:hint="@string/robbery_taxonomic_myocardium_sisal" android:id="@+id/redolentView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/curate_terminus_lifetime"/>
            <CheckedTextView android:background="@color/scraggly_blemish_elmsford" android:hint="@string/amplitude_newcastle_carol_spiegel" android:id="@+id/swastikaArccosView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/carmichael_amphetamine_sticktight_salvador" android:textColor="@color/domingo_palaeontology_meadowsweet" android:textSize="@dimen/pyramidal_rembrandt_textsize"/>
        </LinearLayout>
        <CheckBox android:hint="@string/portend_arpeggio_echoes" android:id="@+id/abroadStrappingView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/accordion_padding_lady_chimpanzee" android:textColor="#841C97D0"/>
        <EditText android:background="@color/pier_argonaut" android:hint="@string/delectable_menstrual_soprano_lecher" android:id="@+id/determinateView" android:inputType="textMultiLine" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/missile_amalgamate_incubus_incident" android:textColor="@color/robotic_chortle_foolish"/>
        <TextView android:hint="@string/grail_mustang_freeway_ancestor" android:id="@+id/judithView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/spindle_typo_amperage_concurring" android:textColor="@color/bail_bronze"/>
        <Button android:background="#35B20B" android:hint="@string/verbosity_delta_burgundy" android:id="@+id/newspapermanUlsterView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/ebony_familiar_padding" android:paddingEnd="@dimen/rimming_shed_margin" android:paddingStart="@dimen/testify_clarinet_width" android:text="@string/withheld_brucellosis_ought" android:textColor="@color/equatorial_nobleman_sand" android:textSize="@dimen/fitful_rowland_textsize"/>
    </LinearLayout>
    <EditText android:background="@color/abundant_sure_lutheran" android:hint="@string/caesar_cleanse_beautify" android:id="@+id/mickyFunctionaryView" android:inputType="textCapWords" android:layout_height="wrap_content" android:layout_margin="@dimen/perturb_ambiguity_width" android:layout_width="match_parent" android:text="@string/lange_eurasia_atwood_wheat" android:textColor="@color/booklet_humorous" app:layout_constraintBottom_toTopOf="@id/proseSulfaView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/suspenseDegradationLayout"/>
    <EditText android:background="@color/bimetallic_corrode_thirst" android:hint="@string/serum_saddlebag_speedboat_needlework" android:id="@+id/proseSulfaView" android:inputType="textCapWords" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/backside_innocuous_buzzer" android:textSize="16sp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/mickyFunctionaryView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
