<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <LinearLayout android:gravity="center_horizontal|start" android:id="@+id/muskratFortinLayout" android:layout_height="wrap_content" android:layout_margin="48dp" android:layout_width="0dp" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/jacksonView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <AutoCompleteTextView android:hint="@string/orinoco_quarry_ahead_huntington" android:id="@+id/propagandistSmoochView" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="@dimen/abater_porcupine_size" android:text="@string/ascendant_einstein_chungking_stole" android:textColor="@color/subtracter_linda_tacoma" android:textSize="@dimen/scrapping_glottal_textsize"/>
        <LinearLayout android:gravity="bottom" android:id="@+id/tanzaniaLayout" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
            <CheckBox android:background="@color/knutson_protestation_scarce" android:hint="@string/neptunium_annulled_adequacy" android:id="@+id/edenJettingView" android:layout_height="match_parent" android:layout_width="wrap_content" android:paddingEnd="@dimen/duff_uppercut" android:paddingStart="@dimen/sibling_rooky_padding" android:text="@string/cornish_bend_nauseate" android:textColor="@color/purport_gumption"/>
            <EditText android:background="@color/hurty_deuterium_frail" android:hint="@string/lazy_ritter_summit" android:id="@+id/lorenzMcclureView" android:inputType="textVisiblePassword" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/auspices_hubbard_flaw" android:textColor="@color/tudor_sylvania_method"/>
            <Button android:background="@color/eucharist_ileum" android:hint="@string/iridium_narrate_succumb_urge" android:id="@+id/emeticView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/whittaker_diode_affair_doll" android:textSize="@dimen/alterate_slate_textsize"/>
            <AutoCompleteTextView android:hint="@string/fanciful_bonze_prosodic" android:id="@+id/tomblikeHutchinsonView" android:layout_height="wrap_content" android:layout_margin="@dimen/skillet_sanborn_width" android:layout_width="wrap_content" android:text="@string/abscond_judas_evade_familial" android:textColor="@color/incombustible_grad" android:textSize="@dimen/auction_harmony_textsize"/>
            <Button android:background="@color/lugubrious_victory_transverse" android:hint="@string/suny_presumptive_parliament_windward" android:id="@+id/emolumentView" android:layout_height="wrap_content" android:layout_margin="@dimen/inoffensive_kudzu_margin" android:layout_width="wrap_content" android:text="@string/curate_terminus_lifetime" android:textColor="#A92B9193"/>
            <Button android:background="@color/baseman_gogh_brie" android:hint="@string/folk_fountainhead_reagan" android:id="@+id/krauseEnquiryView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/annal_downturn" android:text="@string/irish_fayette_gaugeable" android:textColor="@color/precambrian_lachesis_ipecac" android:textSize="@dimen/pyramidal_rembrandt_textsize"/>
            <CheckedTextView android:background="@color/entreaty_sideshow" android:hint="@string/compacter_bulldog_pavlovian_paralinguistic" android:id="@+id/feedImpedimentView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/northerly_taper_propane" android:textColor="@color/negro_polyglot_poultry" android:textSize="@dimen/shyly_equip_textsize"/>
            <TextView android:hint="@string/accordion_padding_lady_chimpanzee" android:id="@+id/vestibuleView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/netting_commando_caterpillar_abdominal" android:textColor="#E557EF"/>
            <CheckedTextView android:background="#F39329" android:hint="@string/abner_diversionary_haplology" android:id="@+id/steadyEphemerisView" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/murphy_drunk_padding" android:layout_marginStart="@dimen/cosy_knight" android:layout_marginTop="@dimen/reticent_liaison_height" android:layout_width="wrap_content" android:text="@string/lane_bole_edna_olympia" android:textColor="@color/bullhead_eclipse_cryptanalytic"/>
        </LinearLayout>
        <CheckBox android:hint="@string/turbidity_resultant_george" android:id="@+id/rinehartOdysseyView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/whence_schwab_ritchie" android:textSize="12sp"/>
        <AutoCompleteTextView android:background="@color/saprophytic_indefinite_chord" android:hint="@string/acton_phosphorous_homeostasis_dominique" android:id="@+id/ambassadorView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/arnold_silica_perverse_propionate" android:textColor="@color/coddington_gaucherie"/>
        <AutoCompleteTextView android:background="@color/lagrangian_forsake" android:hint="@string/winsome_esther_jocular" android:id="@+id/waterfowlView" android:layout_height="wrap_content" android:layout_margin="@dimen/bootlegging_tonk_size" android:layout_width="wrap_content" android:text="@string/sixteen_porridge_scallop_control" android:textColor="@color/saprophytic_indefinite_chord"/>
        <CheckBox android:background="@color/infrared_enthusiasm" android:hint="@string/exercisable_dribble_obsess_nimh" android:id="@+id/matildaBehalfView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/radiology_gull_wapiti" android:textColor="#76878A"/>
        <AutoCompleteTextView android:background="@color/origin_money" android:hint="@string/excelled_kline_harvestman_sloganeer" android:id="@+id/provideView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/bunkmate_original_padding" android:layout_width="match_parent" android:text="@string/whereon_polity_inhuman" android:textColor="@color/peed_orthonormal"/>
        <CheckedTextView android:background="@color/morrill_wheeze" android:hint="@string/pentateuch_loss_storeroom_sigh" android:id="@+id/flaxseedView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/sturbridge_wrestle" android:layout_marginEnd="@dimen/phone_lascivious_padding" android:layout_marginStart="@dimen/rene_tomblike_padding" android:layout_marginTop="@dimen/atop_irreverent_padding" android:layout_width="wrap_content" android:text="@string/determinant_fortress_itinerant_sobbing" android:textColor="@color/appreciate_arrive_lexington"/>
        <Button android:background="@color/oldster_medallion" android:hint="@string/breach_benz_receipt_underling" android:id="@+id/emptyConsiderView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/croix_score_size" android:text="@string/ulna_mafioso_intuition_checkerboard" android:textColor="@color/college_sanchez_adolescent" android:textSize="@dimen/preston_donahue_textsize"/>
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/doleOxnardLayout" android:layout_height="wrap_content" android:layout_width="match_parent">
            <CheckedTextView android:hint="@string/transcendental_allentown_calibrate_farina" android:id="@+id/nitpickDigestiveView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/creamy_hinterland_grave" android:textColor="@color/emaciate_hackett" android:textSize="@dimen/professorial_chablis_textsize" app:layout_constraintBottom_toTopOf="@id/calendarView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
            <AutoCompleteTextView android:background="#926519EB" android:hint="@string/clattery_herein_liquor" android:id="@+id/calendarView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/serious_spectroscope_lampoon_maelstrom" android:textColor="#D78498" app:layout_constraintBottom_toTopOf="@id/whatView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/nitpickDigestiveView"/>
            <EditText android:background="@color/hash_wavelength" android:hint="@string/ideogram_ortega_omniscient" android:id="@+id/whatView" android:inputType="phone" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/allstate_saddlebag_oaken" android:textColor="@color/fill_whopping" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/calendarView"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <CheckBox android:hint="@string/lightweight_habeas_metzler_agreed" android:id="@+id/alwayView" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="@dimen/wilmington_renal" android:text="@string/swede_trig_circuit" android:textSize="@dimen/scrapping_glottal_textsize"/>
    </LinearLayout>
    <TextView android:background="@color/cart_insulate_pierre" android:hint="@string/aphid_putt_tweed_lapel" android:id="@+id/jacksonView" android:layout_height="wrap_content" android:layout_width="0dp" android:paddingBottom="@dimen/dill_marmalade_width" android:paddingEnd="@dimen/rene_tomblike_padding" android:paddingStart="38dp" android:paddingTop="@dimen/clemson_starlight" android:text="@string/illusive_chunky_impractical_sinuous" android:textColor="@color/anodic_tickle_allay" android:textSize="20sp" app:layout_constraintBottom_toTopOf="@id/abductWorthyView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/muskratFortinLayout"/>
    <EditText android:background="@color/dillon_washburn" android:hint="@string/whelm_inconvertible_statesman_youngish" android:id="@+id/abductWorthyView" android:inputType="textVisiblePassword" android:layout_height="wrap_content" android:layout_width="@dimen/isotropic_usurpation_width" android:text="@string/stoat_barefoot_dolomite" android:textColor="@color/breeches_diminuendo" android:textSize="@dimen/contemporary_quinine_textsize" app:layout_constraintBottom_toTopOf="@id/consideratePetrochemicalView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/jacksonView"/>
    <EditText android:background="@color/impressible_everyman" android:hint="@string/paddle_sinology_graft_grip" android:id="@+id/consideratePetrochemicalView" android:inputType="textVisiblePassword" android:layout_height="wrap_content" android:layout_width="@dimen/cake_biennial_size" android:padding="@dimen/intimate_frankel_size" android:text="@string/urinal_satisfy_work" android:textColor="@color/paulo_sloppy_parade" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/abductWorthyView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
