<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <Button android:background="#D2DD399C" android:hint="@string/booby_saxony_dada_salacious" android:id="@+id/deaconChancellorView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/braun_propeller_bulgaria_coequal" android:textColor="@color/yield_pledge_semester" app:layout_constraintBottom_toTopOf="@id/sikhLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout android:gravity="center_horizontal" android:id="@+id/sikhLayout" android:layout_height="wrap_content" android:layout_width="0dp" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/squashberryHildebrandView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/deaconChancellorView">
        <CheckedTextView android:background="#CFD29C" android:hint="@string/hereto_homotopy_defect" android:id="@+id/aviateBosonView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/apache_alveoli_bushland"/>
        <CheckedTextView android:background="@color/adjoint_tornado" android:hint="@string/bypath_frederick_prepping_plutonium" android:id="@+id/skippingView" android:layout_height="wrap_content" android:layout_margin="@dimen/qualify_blare_size" android:layout_width="wrap_content" android:text="@string/cusp_died_teak_vetch"/>
        <CheckBox android:background="@color/shipley_beaux_officio" android:hint="@string/deforestation_gull_cepheus_notate" android:id="@+id/audioView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/extrude_shrove" android:text="@string/alfredo_harmful_raze_counterpoint" android:textColor="@color/ziegler_stiff"/>
        <Button android:background="@color/calcify_minsky_callaghan" android:hint="@string/fogging_cast_noblesse" android:id="@+id/duranceExhortView" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/prosecution_grievous_width" android:layout_marginStart="@dimen/kelp_padding_height" android:layout_marginTop="@dimen/biophysical_slit_margin" android:layout_width="wrap_content" android:text="@string/marlowe_woodwork_backstop_gape" android:textColor="@color/viscometer_kinesthesis"/>
        <TextView android:hint="@string/barn_tick_giacomo" android:id="@+id/terribleView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/winsome_esther_jocular" android:textColor="@color/seltzer_cesare"/>
        <AutoCompleteTextView android:background="#78DB3813" android:hint="@string/plenty_selves_nosebleed_chinch" android:id="@+id/recessVaduzView" android:layout_height="wrap_content" android:layout_marginTop="@dimen/flathead_sarsparilla_margin" android:layout_width="wrap_content" android:text="@string/altercate_knoll_trust_neuralgia" android:textColor="@color/wahl_streptomycin_pluto"/>
        <EditText android:background="@color/apollo_scud" android:hint="@string/extolling_alsatian_neckline" android:id="@+id/notchView" android:inputType="textVisiblePassword" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/soupy_tiger_width" android:layout_width="wrap_content" android:text="@string/autism_halstead_capricorn" android:textColor="@color/crumple_whittier"/>
        <CheckBox android:hint="@string/blown_contemporary_innkeeper" android:id="@+id/housekeepView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/tippy_polynesia_guenther" android:textColor="@color/doggone_chinook_hangdog"/>
    </LinearLayout>
    <AutoCompleteTextView android:background="@color/earshot_skyhook" android:hint="@string/epilepsy_delouse_spectrophotometer" android:id="@+id/squashberryHildebrandView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/portend_arpeggio_echoes" android:textColor="@color/acrylate_chronic_perjury" app:layout_constraintBottom_toTopOf="@id/newspapermanUlsterView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/sikhLayout"/>
    <CheckBox android:background="#1B5CA858" android:hint="@string/debate_castillo_variety_puff" android:id="@+id/newspapermanUlsterView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/creamy_hinterland_grave" android:textColor="@color/fight_eulogy_errant" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/squashberryHildebrandView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
